--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
         "version": "1.0.0",
         "orientation": "portrait",
         "icon": "./assets/images/login/arrow.png",
+        "backgroundColor": "#161616",
         "scheme": "tradetribe",
         "userInterfaceStyle": "automatic",
         "newArchEnabled": true,
@@ -13,6 +14,13 @@
             "bundleIdentifier": "com.trade.tribe",
             "buildNumber": "1.0.0",
             "supportsTablet": true
+        },
+        "androidStatusBar": {
+            "backgroundColor": "#161616",
+            "barStyle": "light-content"
+        },
+        "androidNavigationBar": {
+            "backgroundColor": "#161616"
         },
         "android": {
             "adaptiveIcon": {
