--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "expo-font": "~13.0.2",
         "expo-haptics": "~14.0.0",
         "expo-image": "~2.0.6",
+        "expo-jwt": "^1.8.2",
         "expo-linking": "~7.0.3",
         "expo-random": "^14.0.1",
         "expo-router": "~4.0.15",
@@ -64,7 +65,7 @@
         "nativewind": "^4.1.23",
         "react": "18.3.1",
         "react-dom": "18.3.1",
-        "react-native": "0.76.7",
+        "react-native": "0.76.9",
         "react-native-animatable": "^1.4.0",
         "react-native-config": "^1.5.3",
         "react-native-gesture-handler": "~2.20.2",
@@ -76,6 +77,7 @@
         "react-native-safe-area-context": "4.12.0",
         "react-native-screens": "~4.4.0",
         "react-native-shimmer-placeholder": "^2.0.9",
+        "react-native-smallcase-gateway": "^5.0.0",
         "react-native-svg": "15.8.0",
         "react-native-tab-view": "^4.0.5",
         "react-native-vector-icons": "^10.2.0",
